# MinageINSEE

./: CMakeLists.txt  LICENSE  README.md  main.cpp  villecritique.cpp  villecritique.h  weather.cpp  weather.h  weatherretriever.cpp  weatherretriever.h
